增加了登录失败时的提示信息显示； 程序启动现在会跳过网络检测直接尝试登录，以减少首次登录延迟。

--- a/Hust-Network-Gui/InputInfoWindow.axaml
+++ b/Hust-Network-Gui/InputInfoWindow.axaml
@@ -9,11 +9,14 @@
         MinWidth="200" MinHeight="120"
         WindowStartupLocation="CenterScreen"
         HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-    <Grid RowDefinitions="*,*,*" ColumnDefinitions="50, 150">
+    <Grid RowDefinitions="*,*,*,*" ColumnDefinitions="50, 150">
         <Label Grid.Row="0" Grid.Column="0" VerticalContentAlignment="Center" Content="学号：" />
         <TextBox Name="UsernameTextBlock" Grid.Row="0" Grid.Column="1" />
         <Label Grid.Row="1" Grid.Column="0" VerticalContentAlignment="Center" Content="密码：" />
         <TextBox Name="PasswordTextBlock" Grid.Row="1" Grid.Column="1" />
-        <Button Grid.Row="2" Grid.Column="1" Content="确定" Click="ConfirmButton_OnClick"/>
+        <TextBlock Name="Message" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                   Foreground="Red" TextWrapping="WrapWithOverflow" />
+        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" 
+                Content="确定" Click="ConfirmButton_OnClick" />
     </Grid>
 </Window>
